Добавил несколько моделей: Городов, Вакансии и Языка. Сделал функицю отображения вакансии в html файле.

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>HELLO WORLD {{name}}!!!!!!!</h1>
-    <p>Today: {{date}}</p>
+    <p>Today: {{object_list}}</p>
 </body>
 </html>
